forgot about meta-tags, lul

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <title>Résumé</title>
     <link rel="stylesheet" href="https://volodymyrkushnir.com/assets/stylesheets/base.css">
-    
+    <meta name="description" content="This page is done for the Binary Studio Academy 2020">
+    <meta name="keywords" content="HTML, CSS, JavaScript, Resume">
+    <meta name="author" content="Marian Slabinoha">
   </head>
   <body>
     ― Hello World! &#x1F609;
