--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="This page is done for the Binary Studio Academy 2020">
     <meta name="keywords" content="HTML, CSS, JavaScript, Resume">
     <meta name="author" content="Marian Slabinoha">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <main>
@@ -143,13 +144,80 @@
               </div>
               <div class="six wide column">
                 <!-- Languages -->
+                <section>
+                  <h3>Languages</h3>
+                  <p class="tags small"><span class="language" lang="uk">&#x1f1fa;&#x1f1e6; Українська</span><span class="language" lang="en">&#x1f1fa;&#x1f1f8; Англійська</span> <span class="language" lang="ru">&#x1f1f7;&#x1f1fa; Русский</span><span class="language" lang="pl">&#x1f1f5;&#x1f1f1; Polski</span></p>
+                </section>
                 <!-- Skills -->
+                <section>
+                  <h3>Skills</h3>
+                  <p class="tags small">HTML CSS JS ECMASCRIPT PHP PYTHON MATLAB C VB DELPHI MYSQL POSTGRESQL LINUX WINDOWS</p>
+                </section>
                 <!-- Character -->
+                <section>
+                  <h3>Character</h3>
+                  <p class="tags small">EXPLORER STRAIGHTFORWARD <a href="https://www.16personalities.com/entp-personality" rel="external">ARCHITECT</a> PROCRASTINATOR ARTIST INTROVERT</p>
+                </section>
                 <!-- Likes -->
+                <section>
+                  <h3>Likes&#x1f603;</h3>
+                  <p class="tags small">
+                    <span class="nowrap">60's AND 70's ROCK</span>
+                    <span class="nowrap">MOUNTAIN HIKING</span>
+                    <span class="nowrap">PLAYING GUITAR</span>
+                    <span class="nowrap">PLAYING PIANO</span>
+                    <span class="nowrap">ARDUINO PROTOTYPING</span>
+                    <span class="nowrap">LIVERPOOL FC</span>
+                    <span class="nowrap">ONLINE EDUCATION</span>
+                    <span class="nowrap">DARK HUMOUR</span>
+                  </p>
+                </section>
                 <!-- Dislikes -->
+                <section>
+                  <h3>Dislikes&#x1f61e;</h3>
+                  <p class="tags small">
+                    <span class="nowrap">COMEDy CLUB</span>
+                    <span class="nowrap">RUSSIAN MUSIC</span>
+                    <span class="nowrap">KVARTAL 95</span>
+                    <span class="nowrap">SOCIALISM</span>
+                    <span class="nowrap">TV SHOWS</span>
+                    <span class="nowrap">BOOKS ON SELF-DEVELOPMENT</span>
+                    <span class="nowrap">STUPIDITY</span>
+                    <span class="nowrap">INCOMPETENCE</span>
+                  </p>
+                </section>
                 <!-- Wants -->
+                <section>
+                  <h3>Wants&#x1f97a;</h3>
+                  <p class="tags small bulleted"><span class="tag">TO BE FIT AND HEALTHY</span><span class="tag">TO HIKE ALL CARPATHIANS SUMMITS HIGHER THAN 1700</span><span class="tag">TO HAVE MORE TIME FOR READING</span><span class="tag">TO TRAVEL THE EUROPE BY CAR</span><span class="tag">TO LEARN SOMETHING NEW</span></p>
+                </section>
                 <!-- Education -->
+                <section>
+                  <h3>Education</h3>
+                  <ul class="timeline">
+                    <li>
+                      <div><em>1<sup>st</sup> December 2012 &ndash; 8<sup>th</sup> September 2016</em></div>
+                      <div><strong>PhD</strong> in <strong>Control process automation</strong> at <a href="https://nung.edu.ua/" rel="external"><strong>Ivano-Frankivsk National Technical University of Oil and Gas</strong></a></div>
+                    </li>
+                    <li>
+                      <div><em>1<sup>st</sup> September 2011 &ndash; 28<sup>th</sup> June 2012</em></div>
+                      <div><strong>Master's degree</strong> in <strong>computer science</strong> at <a href="https://nung.edu.ua/" rel="external"><strong>Ivano-Frankivsk National Technical University of Oil and Gas</strong></a></div>
+                    </li>
+                    <li>
+                      <div><em>1<sup>st</sup> September 2007 &ndash; 28<sup>th</sup> June 2011</em></div>
+                      <div><strong>Bachelor's degree</strong> in <strong>computer science</strong> at <a href="https://nung.edu.ua/" rel="external"><strong>Ivano-Frankivsk National Technical University of Oil and Gas</strong></a></div>
+                    </li>
+                    <li>
+                      <div><em>1<sup>st</sup> September 1996 &ndash; 31<sup>st</sup> May 2007</em></div>
+                      <div><strong>Certificate of graduation</strong> at <strong>Rozhnyativ School of General Education</strong></div>
+                    </li>
+                  </ul>
+                </section>
                 <!-- Articles -->
+                <section>
+                  <h3>Articles</h3>
+                  <p>Link to <a href="https://scholar.google.com.ua/citations?hl=uk&user=lPMS4ZIAAAAJ">Google Scholar Profile</a></p>
+                </section>
               </div>
             </div>
           </div>
